# sv-motional-scenario-tagging

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
configs/: local.example.yaml  server.example.yaml
data/: README.md
docs/: audit.md
outputs/: README.md
prompts/: README.md  json_bev_user_prompt.md  json_only_user_prompt.md  prompt_usage_notes.md  system_prompt.md
schemas/: output_schema.json
scripts/: build_bev_model_inputs.py  build_canonical_od_json.py  build_motional_windows.py  run_local_vllm_eval.py  validate_refined_model_input_schema.py
src/motional_tagging/: __init__.py
src/motional_tagging/canonical/: __init__.py  build_canonical_od_json.py
src/motional_tagging/common/: __init__.py
src/motional_tagging/inference/: __init__.py  run_local_vllm_eval.py
src/motional_tagging/model_inputs/: __init__.py  build_bev_model_inputs.py
src/motional_tagging/validation/: __init__.py  validate_refined_model_input_schema.py
src/motional_tagging/windows/: __init__.py  build_motional_windows.py
tests/: test_integration.py
tests/fixtures/gt/: Rec_Drv_GER_MACHET18_20260227_153128_gt.json  Rec_Drv_GER_MACHET18_20260227_153128_gt_template.csv
