[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "motional-scenario-tagging"
version = "0.1.0"
description = "Integrated autonomous-driving motional scenario tagging pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Pillow>=10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]
server = [
  "vllm==0.24.0",
  "tokenizers==0.22.2",
  "numpy==2.2.6",
  "regex==2026.6.28",
  "filelock==3.29.7",
  "sympy==1.14.0",
  "networkx==3.4.2",
  "tqdm==4.68.4",
  "typing-inspection==0.4.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
